fixed alignment, removed redundant import

--- a/src/components/TemperatureHistory/index.scss
+++ b/src/components/TemperatureHistory/index.scss
@@ -1,25 +1,25 @@
 @mixin dispComp {
-  display:flex;
+  display: flex;
   justify-content: center;
-  color: #2a4d61
+  color: #2a4d61;
 }
 
 @mixin bigFont {
   color: #2a4d61;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: large;
 }
 
 @mixin smallFont {
   color: #2a4d61;
-  font-family: 'Share Tech', sans-serif;
+  font-family: "Share Tech", sans-serif;
   font-size: medium;
 }
 
 @mixin buttonFont {
   color: #2a4d61;
   // color:
-  font-family: 'Oxanium', cursive;
+  font-family: "Oxanium", cursive;
   font-size: small;
 }
 
@@ -48,6 +48,10 @@ h1.TempDisp {
   justify-content: space-evenly;
   font-size: 26px;
   // position: fixed;
+}
+
+.graphMargin1 {
+  margin-left: 20em;
 }
 
 h1.TempDisp {
